--- a/.github/workflows/infra-app.yml
+++ b/.github/workflows/infra-app.yml
@@ -106,32 +106,32 @@ jobs:
           fi
 
       - uses: actions/setup-node@v3
-        if: ${{ steps.set-env.outputs.IS_MAIN != true }}
+        if: ${{ steps.set-env.outputs.is-main != true }}
         with:
           node-version: latest
 
       - name: Install dependencies
-        if: ${{ steps.set-env.outputs.IS_MAIN != true }}
+        if: ${{ steps.set-env.outputs.is-main != true }}
         working-directory: app
         run: |
           npm install --global vite pnpm
           pnpm i
 
       - name: Build
-        if: ${{ steps.set-env.outputs.IS_MAIN != true }}
+        if: ${{ steps.set-env.outputs.is-main != true }}
         working-directory: app
         run: |
           pnpm run build-ci --mode $ENV
 
       - name: Compress build
-        if: ${{ steps.set-env.outputs.IS_MAIN != true }}
+        if: ${{ steps.set-env.outputs.is-main != true }}
         working-directory: app
         run: |
           cd ${{ env.BUILD_DIR }}
           zip -r ${{ env.BUILD_ARTIFACT }}.zip ./*
 
       - name: Upload build
-        if: ${{ steps.set-env.outputs.IS_MAIN != true }}
+        if: ${{ steps.set-env.outputs.is-main != true }}
         id: upload-build
         uses: actions/upload-artifact@v3
         with:
