--- a/.github/workflows/infra-app.yml
+++ b/.github/workflows/infra-app.yml
@@ -76,7 +76,6 @@ jobs:
       github.event_name == 'release'
     outputs:
       build-artifact-uuid: ${{ steps.set-env.outputs.BUILD_ARTIFACT_UUID }}
-      is-main: ${{ steps.set-env.outputs.IS_MAIN }}
     steps:
       - uses: actions/checkout@v3
 
@@ -96,7 +95,6 @@ jobs:
           elif [ "$IS_MAIN" = true ]; then
             echo "BUILD_ARTIFACT_UUID=${BUILD_ARTIFACT_UUID}" >> $GITHUB_OUTPUT
             echo "ENV=uat" >> $GITHUB_ENV
-            echo "IS_MAIN=true" >> $GITHUB_OUTPUT
           elif [ "$IS_RELEASE" = 'true && true' ]; then
             echo "BUILD_ARTIFACT_UUID=${BUILD_ARTIFACT_UUID}" >> $GITHUB_OUTPUT
             echo "ENV=production" >> $GITHUB_ENV
@@ -106,32 +104,32 @@ jobs:
           fi
 
       - uses: actions/setup-node@v3
-        if: ${{ steps.set-env.outputs.is-main != true }}
+        if: ${{ github.ref != 'refs/heads/main' }}
         with:
           node-version: latest
 
       - name: Install dependencies
-        if: ${{ steps.set-env.outputs.is-main != true }}
+        if: ${{ github.ref != 'refs/heads/main' }}
         working-directory: app
         run: |
           npm install --global vite pnpm
           pnpm i
 
       - name: Build
-        if: ${{ steps.set-env.outputs.is-main != true }}
+        if: ${{ github.ref != 'refs/heads/main' }}
         working-directory: app
         run: |
           pnpm run build-ci --mode $ENV
 
       - name: Compress build
-        if: ${{ steps.set-env.outputs.is-main != true }}
+        if: ${{ github.ref != 'refs/heads/main' }}
         working-directory: app
         run: |
           cd ${{ env.BUILD_DIR }}
           zip -r ${{ env.BUILD_ARTIFACT }}.zip ./*
 
       - name: Upload build
-        if: ${{ steps.set-env.outputs.is-main != true }}
+        if: ${{ github.ref != 'refs/heads/main' }}
         id: upload-build
         uses: actions/upload-artifact@v3
         with:
