--- a/.cicd/update.yml
+++ b/.cicd/update.yml
@@ -10,8 +10,10 @@ resources:
 trigger: none
 
 pool:
-  vmImage: ubuntu-latest
-
+  - vmImage: ubuntu-latest
+  - name: osx.pro
+    demands:
+      - agent.name -equals pro
 variables:
   - name: source_repo
     value: "sp"
