--- a/.cicd/update.yml
+++ b/.cicd/update.yml
@@ -10,10 +10,10 @@ resources:
 trigger: none
 
 pool:
-  - vmImage: ubuntu-latest
-  - name: osx.pro
-    demands:
-      - agent.name -equals pro
+  vmImage: ubuntu-latest
+  name: osx.pro
+  demands:
+    - agent.name -equals pro
 variables:
   - name: source_repo
     value: "sp"
