--- a/.cicd/update.yml
+++ b/.cicd/update.yml
@@ -17,12 +17,16 @@ resources:
 
 trigger: none
 
-pool:
-  vmImage: ubuntu-latest
-  ${{ if eq(parameters['use_osx'], 'true') }}: 
+${{ if eq(parameters['use_osx'], 'true') }}: 
+  pool:
+    vmImage: ubuntu-latest
     name: osx.pro
     demands:
       - agent.name -equals pro
+${{ else }}:
+  pool:
+    vmImage: ubuntu-latest
+
 variables:
   - name: source_repo
     value: ${{ parameters.source_repo }}
